[gd_scene load_steps=13 format=3 uid="uid://ba6ifh3shnl1d"]

[ext_resource type="Script" uid="uid://bfjw1vt2woiko" path="res://scenes/character_selector.gd" id="1_cl78x"]
[ext_resource type="Resource" uid="uid://ck8qxvs3me11h" path="res://scenes/run/run_startup.tres" id="2_4xi2e"]
[ext_resource type="FontFile" uid="uid://bghjbryekmnis" path="res://assets/fonts/linux-libertine/LinLibertine_5.3.0_2012_07_02/LinLibertineOTF_5.3.0_2012_07_02/LinLibertine_R.otf" id="2_otyuf"]
[ext_resource type="FontFile" uid="uid://b1ahfe6v5ucl7" path="res://assets/fonts/linux-libertine/LinLibertine_5.3.0_2012_07_02/LinLibertineOTF_5.3.0_2012_07_02/LinLibertine_RBI.otf" id="2_wamhw"]
[ext_resource type="Theme" uid="uid://d2wc7fposrlqs" path="res://themes/wizard_theme.tres" id="3_otyuf"]
[ext_resource type="Texture2D" uid="uid://ppn4laxwte56" path="res://assets/sprites/cole.PNG" id="3_wamhw"]
[ext_resource type="ButtonGroup" uid="uid://c1ah1mjr0h2as" path="res://themes/character_button_group.tres" id="5_dy3sk"]
[ext_resource type="Texture2D" uid="uid://cd1e7xebxf3sc" path="res://assets/sprites/cole_portrait.png" id="5_ktnu4"]

[sub_resource type="Gradient" id="Gradient_ekxnf"]
colors = PackedColorArray(0.07, 0.0021, 0.0518934, 1, 0.0493923, 0.0443764, 0.066303, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_bqqt6"]
gradient = SubResource("Gradient_ekxnf")

[sub_resource type="LabelSettings" id="LabelSettings_wu84c"]
font = ExtResource("2_wamhw")
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_otyuf"]
font = ExtResource("2_otyuf")
font_size = 25

[node name="CharacterSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cl78x")
run_startup = ExtResource("2_4xi2e")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_bqqt6")

[node name="CharacterText" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -331.0
offset_top = 41.0
offset_right = 331.0
offset_bottom = 186.0
grow_horizontal = 2

[node name="Title" type="Label" parent="CharacterText"]
unique_name_in_owner = true
layout_mode = 2
text = "Cole"
label_settings = SubResource("LabelSettings_wu84c")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="CharacterText"]
unique_name_in_owner = true
custom_minimum_size = Vector2(660, 10)
layout_mode = 2
text = "Can be found in many places at once.
Second line of text."
label_settings = SubResource("LabelSettings_otyuf")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="CharacterImage" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(236, 365)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 78.0
offset_top = -578.0
offset_right = 378.0
offset_bottom = -78.0
grow_vertical = 0
texture = ExtResource("3_wamhw")
expand_mode = 1
stretch_mode = 3

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -174.0
offset_top = -93.0
offset_right = -24.0
offset_bottom = -33.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("3_otyuf")
text = "Start"

[node name="CharacterButtons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -182.0
offset_top = -50.0
offset_right = 182.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32

[node name="ColeButton" type="Button" parent="CharacterButtons"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme = ExtResource("3_otyuf")
toggle_mode = true
button_pressed = true
button_group = ExtResource("5_dy3sk")

[node name="TextureRect" type="TextureRect" parent="CharacterButtons/ColeButton"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("5_ktnu4")

[node name="Char2Button" type="Button" parent="CharacterButtons"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme = ExtResource("3_otyuf")
toggle_mode = true
button_group = ExtResource("5_dy3sk")

[node name="TextureRect" type="TextureRect" parent="CharacterButtons/Char2Button"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("5_ktnu4")

[node name="Char3Button" type="Button" parent="CharacterButtons"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme = ExtResource("3_otyuf")
toggle_mode = true
button_group = ExtResource("5_dy3sk")

[node name="TextureRect" type="TextureRect" parent="CharacterButtons/Char3Button"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("5_ktnu4")

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CharacterButtons/ColeButton" to="." method="_on_cole_button_pressed"]
[connection signal="pressed" from="CharacterButtons/Char2Button" to="." method="_on_char_2_button_pressed"]
[connection signal="pressed" from="CharacterButtons/Char3Button" to="." method="_on_char_3_button_pressed"]
